# Engine-Python

./: CMakeLists.txt  Makefile  README.md  build.sh  interface.py  make.sh  test.py  test_debug.py
inc/: entity.h  entityManager.h  game.h  init.h  physicsSystem.h  textureManager.h  timer.h  utils.h  vector.h
src/: entity.c  entityManager.c  game.c  main.c  physicsSystem.c  textureManager.c  timer.c  utils.c  vector.c
